--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=testing jest --runInBand --verbose"
   },
   "repository": {
     "type": "git",
