--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "knex": "^0.15.2",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
+    "npm": "^6.4.1",
     "path": "^0.12.7",
     "pg": "^7.4.3"
   },
