added database_name in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,6 @@ node_js:
 before_script: 
   - psql -c 'create database nutriscan_test;' -U postgres
 
-env:
-  - NODE_ENV="testing"
-
 script:
   - npm run reboot
   - npm run coverage
@@ -18,3 +15,6 @@ script:
 services:
   -postgresql 
 
+env:
+  - NODE_ENV="testing"
+  - DATABASE_NAME='nutriscan'
