--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ before_script:
   - psql -c 'create database allergease_test;' -U postgres
 
 script:
+  - npm install
   - npm run reboot
   - npm run coverage
 
