--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,10 @@ node_js:
 before_script: 
   - psql -c 'create database allergease_test;' -U postgres
 
-install: npm install 
-
 cache: npm
 
 script:
+  - npm install
   - npm run reboot
   - npm run coverage
 
